--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -16,21 +16,22 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Technical Hunt"
+            android:text="Techno - Hunt"
             android:layout_gravity="center"
             android:layout_marginTop="150dp"
-            android:textSize="30sp"
+            android:textSize="45sp"
             android:textStyle="bold"/>
+
         <TextView
             android:id="@+id/textView2"
-            android:textColor="#BDBDBD"
             android:layout_width="398dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="50dp"
             android:text="By Optimist Society\n \n\n&#64;"
             android:textAlignment="center"
-            android:textSize="25sp"
-            android:layout_marginTop="50dp"/>
+            android:textColor="#BDBDBD"
+            android:textSize="35sp" />
         <TextView
             android:textColor="#BDBDBD"
             android:layout_width="398dp"
@@ -38,16 +39,18 @@
             android:layout_gravity="center"
             android:text=""
             android:textAlignment="center"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:layout_marginTop="50dp"/>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/l2"
+        android:layout_width="274dp"
+        android:layout_height="185dp"
+        android:layout_gravity="center"
         android:layout_marginTop="50sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/zeal">
+        android:background="@drawable/zeal"
+        android:orientation="vertical">
 
     </LinearLayout>
 
