--- a/app/src/main/res/layout/activity_about_game.xml
+++ b/app/src/main/res/layout/activity_about_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wind"
-    tools:context="com.heyman.techunt2k18.AboutGame">
+    tools:context="com.optimists.techunt2k19.AboutGame">
 
     <ScrollView
         android:layout_width="match_parent"
