--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,125 +13,25 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
-        android:text="Select Your Team Fellas"
+        android:text="Select Your Team "
         android:textColor="#BDBDBD"
         android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="spread_inside" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+    <ListView
+        android:id="@+id/teamSelector"
+        android:layout_width="366dp"
+        android:layout_height="518dp"
+        android:layout_marginTop="88dp"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
-        <RadioButton
-            android:id="@+id/r1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 1"
-            android:textColor="@color/textColor"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 2"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 3"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 4"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 5"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 6"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 7"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-
-        <RadioButton
-            android:id="@+id/r8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Team 8"
-            android:textColor="#E0E0E0"
-            android:textSize="22sp"
-            android:typeface="serif" />
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/button"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
-        android:onClick="onProceed"
-        android:text="Proceed"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
 </android.support.constraint.ConstraintLayout>
