--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,11 +20,11 @@
         app:srcCompat="@drawable/thl" />
 
     <TextView
+        android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:id="@+id/textView11"
-        android:text="Technical Hunt"
+        android:text="Techno - Hunt"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
